--- a/AutomatedTellerMachine/Views/Home/Index.cshtml
+++ b/AutomatedTellerMachine/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
       <span class="glyphicon glyphicon-circle-arrow-down"></span>Withdrawl</a>
       <a href="#" class="btn btn-primary btn-large btn-block">
           <span class="glyphicon glyphicon-flash"></span>Quick Cash $100</a>
-          <a href="#" class="btn btn-primary btn-large btn-block">
+          <a href="@Url.Action("Details","CheckingAccount")" class="btn btn-primary btn-large btn-block">
               <span class="glyphicon glyphicon-question-sign"></span>Balance Inquiry
           </a>
       
